[package]
name = "libferroxid"
version = "0.2.0"
authors = ["András Németh <sunarch@protonmail.com>"]
edition = "2021"
description = "Miscellaneous tools"
documentation = "https://docs.rs/libferroxid"
readme = "README.md"
homepage = "https://codeberg.org/sunarch/libferroxid"
repository = "https://codeberg.org/sunarch/libferroxid"
license = "MPL-2.0"
keywords = [
    "libferroxid"
]
categories = [
    "command-line-utilities",
    "network-programming",
]
exclude = [".idea/"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "libferroxid"
path = "src/lib.rs"

[dependencies]
byteorder = "1.4.3"
